--- a/estudianteform.ui
+++ b/estudianteform.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>Registro</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0" colspan="2">
@@ -24,7 +24,7 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QLineEdit" name="txtTermino"/>
+      <widget class="QLineEdit" name="txtNombre"/>
      </item>
      <item row="1" column="0">
       <widget class="QLabel" name="label_2">
@@ -34,7 +34,7 @@
       </widget>
      </item>
      <item row="1" column="1">
-      <widget class="QLineEdit" name="txtTermino_2"/>
+      <widget class="QLineEdit" name="txtnota1"/>
      </item>
      <item row="2" column="0">
       <widget class="QLabel" name="label_3">
@@ -44,19 +44,19 @@
       </widget>
      </item>
      <item row="2" column="1">
-      <widget class="QLineEdit" name="txtTermino_3"/>
+      <widget class="QLineEdit" name="txtnota2"/>
      </item>
     </layout>
    </item>
    <item row="1" column="0">
-    <widget class="QPushButton" name="pushButton_2">
+    <widget class="QPushButton" name="BotonCancelar">
      <property name="text">
       <string>Cancelar</string>
      </property>
     </widget>
    </item>
    <item row="1" column="1">
-    <widget class="QPushButton" name="pushButton">
+    <widget class="QPushButton" name="BtonAceptar">
      <property name="text">
       <string>Aceptar</string>
      </property>
